# Acorn

./: .acorn.toml.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  run.py  run_nova.py  setup.py
acorn/: main.py
acorn/config/: project_config.py  settings.py
acorn/core/: agent.py  context.py  costs.py  planner.py  session.py
acorn/tools/: filesystem.py  terminal.py
acorn/ui/: terminal_ui.py
acorn_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
nova/: __init__.py  main.py
nova/config/: settings.py
nova/core/: agent.py  router.py  session.py
nova/tools/: git_tools.py
nova/ui/: terminal_ui.py
nova_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
